--- a/src/style.css
+++ b/src/style.css
@@ -1,7 +1,23 @@
+@import url("https://fonts.googleapis.com/css2?family=Koh+Santepheap:wght@100;300;400;700;900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 @import "tailwindcss";
+
+* {
+  font-family: "Poppins", sans-serif;
+  color: #232323;
+}
 .container {
   max-width: 1200px;
   width: 100%;
   padding: 1.5rem;
   margin: 0 auto;
+}
+
+@theme {
+  --font-primary: "Koh Santepheap", serif;
+  --font-secondary: "Poppins", sans-serif;
+
+  --color-primary: #ff0000;
+  --color-dark-10: #232323;
+  --color-dark-20: #f8f5f2;
+  --color-dark-30: #ffffff;
 }
