--- a/src/style.css
+++ b/src/style.css
@@ -2,7 +2,6 @@
 @import "tailwindcss";
 
 * {
-  font-family: "Poppins", sans-serif;
   color: #232323;
 }
 .container {
@@ -13,8 +12,8 @@
 }
 
 @theme {
-  --font-primary: "Koh Santepheap", serif;
-  --font-secondary: "Poppins", sans-serif;
+  --font-p1: "Koh Santepheap", serif;
+  --font-s2: "Poppins", sans-serif;
 
   --color-primary: #ff0000;
   --color-dark-10: #232323;
